--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,11 @@
 	text-align: center;
 }
 
+.content {
+	padding-right: 100px;
+	padding-left: 40px;
+}
+
 .github-icons img {
 	height: 100px;
 	margin-right: 50px;
@@ -84,6 +89,7 @@
 	justify-content: center;
 	margin-top: 50px;
 }
+
 /* Grid */
 
 	.row {
@@ -2400,10 +2406,6 @@
 				width: 100%;
 			}
 
-			.image.phone .inner, .image.phone:before, .image.phone:after {
-				display: block;
-				border: solid 2px rgba(255, 255, 255, 0.25);
-			}
 
 			.image.phone .inner {
 				position: relative;
